change z-index to try fix modal being grayed out.

--- a/app/www/css/grade_selector.css
+++ b/app/www/css/grade_selector.css
@@ -1045,7 +1045,7 @@ a.glossaryTerm:hover { border-bottom: none; text-decoration: none; }
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	z-index: 99999;
+	z-index: 1515;
 	cursor: default;
 }
 
